css/style.css
:root {
    --nav-height: 150px;
}

@media only screen and (max-width: 1000px) {
    main {
        margin: 0;
    }
}

@media only screen and (min-width: 1001px) {
    main {
        margin: auto 10%;
    }
}

body {
    padding-top: 0%;
}

* {
    font-family: 'Roboto-Regular' Arial, sans-serif;
    font-size: 20px;
    text-align: justify;
}

@font-face {
    font-family: "Roboto-Regular";
    src: url(../font/Roboto-Regular.ttf);
}

nav {
    z-index: 20;
    display: flex;
    justify-content: space-between;
    height: var(--nav-height);
    align-items: center;
    background-color: white;
    padding: 0% 2%;
    border-bottom: 4px black solid;
}

.nav-content {
    display: flex;
    gap: 30px;
    text-align: justify;
}

.navAcompanhamento {
    position: fixed;
    top: 0;
    width: 100%;
}

nav img {
    width: 40%;
    z-index: -1;
}

nav a {
    margin-right: 20px;
    font-size: 20px;
    text-decoration: none !important;
    color: black !important;
    transition: 0.5s;
}

nav a:hover {
    color: red !important;
}

main {
    background-color: white;
    padding: 5%;
    padding-top: 0%;
    margin-top: calc(var(--nav-height));
}

h1 {
    font-size: 40px !important;
    margin-bottom: 20px;
}

h2{
    font-size: 30px !important;
    margin-bottom: 20px !important;
}
h3{
    text-align: center;
}
.image{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 40px 0;
}
.landing-page {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.landing-page img {
    height: 500px;
}

.LandingPageImage {
    width: 120%;
    margin-bottom: 30px;
}

.landing-page-title{
    z-index: 0;
    top: 610px;
    position: absolute;
    background-color: black;
    color: white !important;
}
.landing-page h1 {
    color: black;
    padding: 10px 50px;
    text-align: center;
}
.landing-page-subtitle{
    font-size: 40px;
    text-align: center;
}
.citacao{
    background-image: linear-gradient(140deg, red 0%, red 50.52%, red 100%);
    padding: 10px;
    border-radius: 5px;
    border: 2px solid black;
    box-shadow: 20px 20px grey;
    margin: 3%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: white;
}
.citacao span{
}
.citacao p{
    margin: 0;
    padding: 20px 40px;
    border-radius: 5px;
    background-color: white;
}
.list-imgs{
    margin: 50px 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.list-imgs div{
    display: flex;
    align-items: center;
    justify-content: center;
}
.list-imgs img{
    width: 100%;
    height: 500px;
}

.AnandaImg {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.AnandaImg img {
    width: 100%;
    height: 600px;
}

.hiphop-house {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.hiphop-house img {
    width: 1100px;
    height: 600px;
}

.grafiteHipHopHouseImg {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.ImgDescription {
    text-align: center;
    color: gray;
}

.grafiteHipHopHouseImg img {
    width: 90%;
}

.hiphopHouseLocationVideo {
    display: flex;
    justify-content: center;
}

.SalvaFlowLogo {
    width: 10% !important;
    height: 10% !important;
    margin-bottom: 40px;
}
.Artistas{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-evenly;
    margin: 30px 30px;
}
.Artistas img{
    border: 5px solid black;
    width: 250px;
    border-radius: 50%;
}
.Artista{
    width: 250px;
    height: 350px;
}
button{
    background-color: unset;
    border: none;
    transition: 0.5s;
}
button:hover{
    color: red;
    transform: scale(1.2);
}
button:hover img{
    border: 5px solid red;
}

